2012-08-13 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report.m: fixed Excel analysis generation bug.
	* dmbr_report_cell_expt: added cosmetic plot changes. rationalized plot naming system.

2012-08-12 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report.m: added filtering functionality to initial file selection process.

2012-08-12 Christian Stith <chstith@ncsu.edu>
	* dmbr_adjust_report.m: updated to remove deselected files and beads. improved figure closing.
	* dmbr_analysis_gui.fig: added Power Law (Fabry) model.
	* dmbr_fit.m: added Power Law (Fabry) model.
	* dmbr_multi_file_report.m: improved file sorting and main directory tracking. generalized excel analysis output format. added Power Law (Fabry) Model.
	* dmbr_report_cell_expt.m: generalized fit type and excel output. Added Power Law (Fabry) model.

2012-07-30 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report.m: removed directory bug. needs work.
	* dmbr_report_cell_expt.m: removed vfd_fps call. needs work.
	* dmbr_init.m: adjusted fps access to include index.

2012-07-12 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report.m: added general trackingfile finder function.
	* dmbr_report_cell_expt.m: added general trackingfile finder function. improved Jeffrey plotting.

2012-07-11 Christian Stith <chstith@ncsu.edu>
	* dmbr_adjust_report.m: cleaned up GUI appearance.
	* dmbr_init.m: added fps functionality.
	* dmbr_multi_file_report.m: added plot selection gui & functionality. improved initial breakpoint setting algorithm.
	* dmbr_report_cell_expt.m: added Jeffrey plot model option. added plot selection functionality. improved plotting procedures.

2012-06-28 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report: Fixed multi-directory analysis bug.
	* dmbr_adjust_report.m: "
	* dmbr_report_cell_expt.m: "

2012-06-28 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report: fixed GUI filename bugs.
	* dmbr_adjust_report.m: fixed Excel sidebar printout bug.
